Rename LandCover vignette data

--- a/inst/doc/UsingMODISTools.Rnw
+++ b/inst/doc/UsingMODISTools.Rnw
@@ -166,7 +166,7 @@ head(land.summary)
 <<echo=FALSE>>=
 land.summary <- read.csv(paste("./LandCover/",
                                list.files(path = "./LandCover/",
-                                          pattern = "MODIS Land Cover Summary"),
+                                          pattern = "LandCoverSummary"),
                                sep = ""))
 head(land.summary)
 @
