--- a/inst/doc/UsingMODISTools.Rnw
+++ b/inst/doc/UsingMODISTools.Rnw
@@ -64,18 +64,30 @@ That's all we need! Let's download our EVI data first.
 \section{Download the data}
 \subsection{Specifying a subset request}
 The shortname code for the EVI product is ``MOD13Q1". We can check the codes for all the products available using \code{GetProducts}, and we can find the shortname codes for all data bands within each product using \code{GetBands}.
-<<>>=
+<<eval=FALSE>>=
 GetProducts()
+@
+<<echo=FALSE>>=
+c("MCD12Q1", "MCD12Q2", "MCD43A1", "MCD43A2", "MCD43A4", "MOD09A1",
+"MOD11A2", "MOD13Q1", "MOD15A2", "MOD15A2GFS", "MOD16A2", "MOD17A2_51",
+"MOD17A3", "MYD09A1", "MYD11A2", "MYD13Q1", "MYD15A2")
+@
+<<eval=FALSE>>=
 GetBands(Product = "MOD13Q1")
+@
+<<echo=FALSE>>=
+c("250m_16_days_blue_reflectance", "250m_16_days_MIR_reflectance",
+"250m_16_days_NIR_reflectance", "250m_16_days_pixel_reliability",
+"250m_16_days_red_reflectance", "250m_16_days_relative_azimuth_angle",
+"250m_16_days_sun_zenith_angle", "250m_16_days_view_zenith_angle",
+"250m_16_days_VI_Quality", "250m_16_days_NDVI",
+"250m_16_days_EVI", "250m_16_days_composite_day_of_the_year")
 @
 We will download EVI data at 250m pixel resolution, which is available at 16-day intervals. The shortname code for this data band is 250m\_16\_days\_EVI. We will collect quality control data for these pixels too, which is available from the 250m\_16\_days\_pixel\_reliability band (and 250m\_16\_days\_VI\_Quality too).
 
 We can check that the time-series of MODIS data we want is available for this data product by retrieving the dates for all available time-steps.
-<<>>=
-dates <- 
-  GetDates(Product = "MOD13Q1", Lat = modis.subset$lat[1], Long = modis.subset$long[1])
-min(dates)
-max(dates)
+<<eval=FALSE>>=
+GetDates(Product = "MOD13Q1", Lat = modis.subset$lat[1], Long = modis.subset$long[1])
 @
 The time-period available for the Vegetation Indices product covers 2003-2006 (the maximum shown is at the time this vignette was built), so we can proceed. When we download we also need to decide how large we want the tiles of data for each location to be. We specify this by entering the distance (km) above and below in each direction away from the central pixel, where the input coordinate is located, and then doing the same for left and right. The input must be whole km (integers) for each direction. As an example, if we specify \code{Size=c(1,1)} for this EVI data at 250m pixel resolution, it will retrieve a 9x9 pixel tile for each location, centred on the input coordinate. The tiles this size will be downloaded at the locations for each time-step that falls between the start and end dates. \code{Size=c(0,0)} would specify only the central pixel. The maximum size tile surrounding a location is \code{Size=c(100,100)}.
 
